Update and rename 1requirements.txt to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 cmake==3.22.5
 colorama==0.4.6
-dlib==19.24.1
+dlib-bin
 gitdb==4.0.10
 GitPython==3.1.36
 idna==3.4
